Update and rename Final Project.Rmd to Marketing Data Analysis Final Project.Rmd

--- a/Marketing Data Analysis Final Project.Rmd
+++ b/Marketing Data Analysis Final Project.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Final Project"
-author: "Nadia Eisa (nwe4n)"
+author: "Sarah Raza (sr6bf)"
 date: "12/8/2021"
 output: html_document
 ---
